aws/CouchbaseServer/couchbase-amzn-lnx2.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Couchbase Enterprise Edition Server on Amazon Linux 2",
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "Network Configuration/Access"
                    },
                    "Parameters": [
                        "VpcName",
                        "SubnetList",
                        "SSHCIDR",
                        "KeyName"
                    ]
                },
                {
                    "Label": {
                        "default": "Server Configuration"
                    },
                    "Parameters": [
                        "ServerInstanceCount",
                        "ServerDiskSize",
                        "ServerVersion",
                        "InstanceType",
                        "Username",
                        "Password"
                    ]
                }
            ],
            "ParameterLabels": {
                "SSHCIDR": {
                    "default": "Access CIDR"
                },
                "Username": {
                    "default": "Database Username"
                },
                "Password": {
                    "default": "Database Password"
                }
            }
        }
    },
    "Mappings": {},
    "Parameters": {
        "ServerInstanceCount": {
            "Description": "Number of Couchbase Server Nodes",
            "Type": "Number",
            "Default": 3
        },
        "ServerDiskSize": {
            "Description": "Size in GB of the EBS gp2 volume on each Couchbase node",
            "Type": "Number",
            "Default": 100
        },
        "ServerVersion": {
            "Description": "Couchbase Server Version",
            "Type": "String",
            "Default": "6.6.2",
            "AllowedValues": [
                "6.6.2",
                "6.6.1",
                "6.6.0",
                "6.5.1",
                "6.5.0",
                "6.0.4",
                "6.0.3",
                "6.0.2",
                "6.0.1",
                "6.0.0",
                "7.0.0-beta"
            ]
        },
        "InstanceType": {
            "Description": "Instance type for Couchbase Nodes",
            "Type": "String",
            "Default": "m5.xlarge",
            "AllowedValues": [
                "c5n.xlarge",
                "t3.medium",
                "m4.large",
                "m4.xlarge",
                "m4.2xlarge",
                "m4.4xlarge",
                "m4.10xlarge",
                "m4.16xlarge",
                "m5.large",
                "m5.xlarge",
                "m5.2xlarge",
                "m5.4xlarge",
                "m5.8xlarge",
                "m5.12xlarge",
                "m5.16xlarge",
                "m5a.large",
                "m5a.xlarge",
                "m5a.2xlarge",
                "m5a.4xlarge",
                "m5a.12xlarge",
                "c4.large",
                "c4.xlarge",
                "c4.2xlarge",
                "c4.4xlarge",
                "c4.8xlarge",
                "c5.large",
                "c5.xlarge",
                "c5.2xlarge",
                "c5.4xlarge",
                "c5.9xlarge",
                "c5d.large",
                "c5d.xlarge",
                "c5d.2xlarge",
                "c5d.4xlarge",
                "c5d.9xlarge",
                "r4.large",
                "r4.xlarge",
                "r4.2xlarge",
                "r4.4xlarge",
                "r4.8xlarge",
                "r4.16xlarge",
                "r5.large",
                "r5.xlarge",
                "r5.2xlarge",
                "r5.4xlarge",
                "r5.8xlarge",
                "r5.16xlarge",
                "r5a.large",
                "r5a.xlarge",
                "r5a.2xlarge",
                "r5a.4xlarge",
                "r5a.8xlarge",
                "r5a.12xlarge",
                "r5a.16xlarge",
                "r5ad.large",
                "r5ad.xlarge",
                "r5ad.2xlarge",
                "r5ad.4xlarge",
                "r5ad.8xlarge",
                "r5ad.12xlarge",
                "r5ad.16xlarge",
                "i3.large",
                "i3.xlarge",
                "i3.2xlarge",
                "i3.4xlarge",
                "i3.8xlarge",
                "i3.16xlarge"
            ]
        },
        "Username": {
            "Description": "Username for Couchbase administrator",
            "Type": "String"
        },
        "Password": {
            "Description": "Password for Couchbase administrator",
            "Type": "String",
            "NoEcho": true
        },
        "KeyName": {
            "Description": "Name of an existing EC2 KeyPair",
            "Type": "AWS::EC2::KeyPair::KeyName"
        },
        "SSHCIDR": {
            "Description": "SSH CIDR",
            "Type": "String",
            "MinLength": 9,
            "MaxLength": 18,
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid CIDR range of the form x.x.x.x/x."
        },
        "VpcName": {
            "Type": "AWS::EC2::VPC::Id",
            "Description": "VPC Identifier"
        },
        "SubnetList": {
            "Description": "Subnet List (Note:  If you select a private subnet without egress to the internet, the template will fail to deploy correctly)",
            "Type": "List<AWS::EC2::Subnet::Id>"
        }
    },
    "Resources": {
        "CouchbaseSecret": {
            "Type": "AWS::SecretsManager::Secret",
            "Properties": {
                "Name": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "-CouchbaseSecret"
                        ]
                    ]
                },
                "Description": "Couchbase Admin Username/Password Secret",
                "SecretString": {
                    "Fn::Join": [
                        "",
                        [
                            "{\"username\": \"",
                            {
                                "Ref": "Username"
                            },
                            "\", \"password\":\"",
                            {
                                "Ref": "Password"
                            },
                            "\"}"
                        ]
                    ]
                }
            }
        },
        "ServerAutoScalingGroup": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Properties": {
                "LaunchTemplate": {
                    "LaunchTemplateId": {
                        "Ref": "ServerLaunchTemplate"
                    },
                    "Version": {
                        "Fn::GetAtt": [
                            "ServerLaunchTemplate",
                            "LatestVersionNumber"
                        ]
                    }
                },
                "MinSize": "1",
                "MaxSize": "100",
                "DesiredCapacity": {
                    "Ref": "ServerInstanceCount"
                },
                "VPCZoneIdentifier": {
                    "Ref": "SubnetList"
                }
            },
            "CreationPolicy": {
                "ResourceSignal": {
                    "Count": {
                        "Ref": "ServerInstanceCount"
                    },
                    "Timeout": "PT15M"
                }
            },
            "DependsOn": [
                "CouchbaseSecret"
            ]
        },
        "ServerLaunchTemplate": {
            "Type": "AWS::EC2::LaunchTemplate",
            "Properties": {
                "LaunchTemplateData": {
                    "ImageId": {
                        "Fn::FindInMap": [
                            "CouchbaseServer",
                            {
                                "Ref": "AWS::Region"
                            },
                            "AMI"
                        ]
                    },
                    "InstanceType": {
                        "Ref": "InstanceType"
                    },
                    "SecurityGroupIds": [
                        {
                            "Fn::GetAtt": [
                                "CouchbaseServerSecurityGroup",
                                "GroupId"
                            ]
                        }
                    ],
                    "KeyName": {
                        "Ref": "KeyName"
                    },
                    "EbsOptimized": true,
                    "IamInstanceProfile": {
                        "Arn": {
                            "Fn::GetAtt": [
                                "CouchbaseInstanceProfile",
                                "Arn"
                            ]
                        }
                    },
                    "BlockDeviceMappings": [
                        {
                            "DeviceName": "/dev/xvda",
                            "Ebs": {
                                "VolumeType": "gp3",
                                "DeleteOnTermination": true
                            }
                        },
                        {
                            "DeviceName": "/dev/sdk",
                            "Ebs": {
                                "VolumeSize": {
                                    "Ref": "ServerDiskSize"
                                },
                                "VolumeType": "gp3",
                                "Encrypted": true
                            }
                        }
                    ],
                    "UserData": {}
                }
            }
        },
        "CouchbaseInstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Roles": [
                    {
                        "Ref": "CouchbaseRole"
                    }
                ]
            }
        },
        "CouchbaseRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Effect": "Allow",
                            "Principal": {
                                "Service": [
                                    "ec2.amazonaws.com"
                                ]
                            },
                            "Action": [
                                "sts:AssumeRole"
                            ]
                        }
                    ]
                },
                "Policies": [
                    {
                        "PolicyName": "CouchbasePolicy",
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "ec2:CreateTags",
                                        "ec2:DescribeTags",
                                        "ec2:DescribeInstances",
                                        "autoscaling:DescribeAutoScalingGroups"                                        
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                }
                            ]
                        }
                    },
                    {
                        "PolicyName": "CouchbaseSecretPolicy",
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "secretsmanager:GetSecretValue"
                                    ],
                                    "Resource": [
                                        {
                                            "Ref": "CouchbaseSecret"
                                        }
                                    ]
                                }
                            ]
                        }
                    }
                ]
            }
        },
        "CouchbaseServerSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable SSH and Couchbase Ports",
                "VpcId": {
                    "Ref": "VpcName"
                },
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "Description": "Outbound Access",
                        "FromPort": 0,
                        "ToPort": 65535,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "Description": "SSH Ingress port",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Ports",
                        "FromPort": 4369,
                        "ToPort": 4369,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Ports",
                        "FromPort": 4984,
                        "ToPort": 4985,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Admin API Port",
                        "FromPort": 8091,
                        "ToPort": 8096,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Ports",
                        "FromPort": 9100,
                        "ToPort": 9105,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Ports",
                        "FromPort": 9110,
                        "ToPort": 9122,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Ports",
                        "FromPort": 9130,
                        "ToPort": 9130,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Ports",
                        "FromPort": 9998,
                        "ToPort": 9999,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Ports",
                        "FromPort": 11207,
                        "ToPort": 11215,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Ports",
                        "FromPort": 18091,
                        "ToPort": 18096,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "Description": "Couchbase Server Ports",
                        "FromPort": 21100,
                        "ToPort": 21299,
                        "CidrIp": {
                            "Ref": "SSHCIDR"
                        }
                    }
                ]
            }
        }
    }
}
